# geometryvis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  analysis_convex_hull.h  analysis_convex_hull_circles.h  analysis_line_intersection.h  basic_point.h  basic_rect.h  button_handler.h  canvas.h  circle.cpp  circle.h  col.cpp  col.h  console.cpp  console.h  geometry.h  geovis.cpp  line.cpp  line.h  point.cpp  point.h  properties.cpp  rect.cpp  rect.h  render_adapter.cpp  render_adapter.h  sdl2test1.cpp  sdl2test2.cpp  tool.h  tool_2point.h  tool_algo.h  tool_algo_analysis.h  tool_circle.h  tool_console.h  tool_handler.h  tool_line.h  tool_select.h
geovis/: BUILD  analysis_convex_hull.h  analysis_line_intersection.h  button_handler.h  circle.cpp  circle.h  col.cpp  console.cpp  geometry.h  properties.h  rect.h  render_adapter.cpp  tool_console.h  tool_handler.h  tool_point.h  tool_translate.h
sdl2tests/: CMakeLists.txt  sdl2test3.cpp  todo.txt
sigiltests/: CMakeLists.txt  README.txt  sigiltest1.cpp  sigiltest2.cpp
